src/codegen/tests/snapshots/rusty__codegen__tests__string_tests__function_returning_generic_string_should_return_by_ref.snap
---
source: src/codegen/tests/string_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { [61 x i8], [81 x i8] }

@main_instance = global %main zeroinitializer
@utf08_literal_0 = private unnamed_addr constant [4 x i8] c"abc\00"

define void @MID__STRING(ptr %0, ptr %1, i32 %2, i32 %3) {
entry:
  %MID__STRING = alloca ptr, align [filtered]
  store ptr %0, ptr %MID__STRING, align [filtered]
  %IN = alloca ptr, align [filtered]
  store ptr %1, ptr %IN, align [filtered]
  %L = alloca i32, align [filtered]
  store i32 %2, ptr %L, align [filtered]
  %P = alloca i32, align [filtered]
  store i32 %3, ptr %P, align [filtered]
  %deref = load ptr, ptr %MID__STRING, align [filtered]
  call void @llvm.memcpy.p0.p0.i32(ptr align [filtered] %deref, ptr align [filtered] @utf08_literal_0, i32 4, i1 false)
  ret void
}

define void @main(ptr %0) {
entry:
  %fmt = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 0
  %x = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 1
  %__MID__STRING0 = alloca [81 x i8], align [filtered]
  call void @llvm.lifetime.start.p0(i64 -1, ptr %__MID__STRING0)
  call void @llvm.memset.p0.i64(ptr align [filtered] %__MID__STRING0, i8 0, i64 ptrtoint (ptr getelementptr ([81 x i8], ptr null, i32 1) to i64), i1 false)
  call void @MID__STRING(ptr %__MID__STRING0, ptr %fmt, i32 1, i32 2)
  call void @llvm.memcpy.p0.p0.i32(ptr align [filtered] %x, ptr align [filtered] %__MID__STRING0, i32 80, i1 false)
  call void @llvm.lifetime.end.p0(i64 -1, ptr %__MID__STRING0)
  ret void
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i32(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i32, i1 immarg) #0

; Function Attrs: nocallback nofree nosync nounwind willreturn memory(argmem: readwrite)
declare void @llvm.lifetime.start.p0(i64 immarg, ptr captures(none)) #1

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #2

; Function Attrs: nocallback nofree nosync nounwind willreturn memory(argmem: readwrite)
declare void @llvm.lifetime.end.p0(i64 immarg, ptr captures(none)) #1

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
attributes #1 = { nocallback nofree nosync nounwind willreturn memory(argmem: readwrite) }
attributes #2 = { nocallback nofree nounwind willreturn memory(argmem: write) }
