src/codegen/tests/snapshots/rusty__codegen__tests__string_tests__function_returns_a_literal_string.snap
---
source: src/codegen/tests/string_tests.rs
expression: program
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { [81 x i8] }

@main_instance = global %main zeroinitializer
@utf08_literal_0 = private unnamed_addr constant [4 x i8] c"abc\00"

define void @ret(ptr %0) {
entry:
  %ret = alloca ptr, align [filtered]
  store ptr %0, ptr %ret, align [filtered]
  %deref = load ptr, ptr %ret, align [filtered]
  call void @llvm.memcpy.p0.p0.i32(ptr align [filtered] %deref, ptr align [filtered] @utf08_literal_0, i32 4, i1 false)
  ret void
}

define void @main(ptr %0) {
entry:
  %str = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 0
  %__ret0 = alloca [81 x i8], align [filtered]
  call void @llvm.lifetime.start.p0(i64 -1, ptr %__ret0)
  call void @llvm.memset.p0.i64(ptr align [filtered] %__ret0, i8 0, i64 ptrtoint (ptr getelementptr ([81 x i8], ptr null, i32 1) to i64), i1 false)
  call void @ret(ptr %__ret0)
  call void @llvm.memcpy.p0.p0.i32(ptr align [filtered] %str, ptr align [filtered] %__ret0, i32 80, i1 false)
  call void @llvm.lifetime.end.p0(i64 -1, ptr %__ret0)
  ret void
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i32(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i32, i1 immarg) #0

; Function Attrs: nocallback nofree nosync nounwind willreturn memory(argmem: readwrite)
declare void @llvm.lifetime.start.p0(i64 immarg, ptr captures(none)) #1

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #2

; Function Attrs: nocallback nofree nosync nounwind willreturn memory(argmem: readwrite)
declare void @llvm.lifetime.end.p0(i64 immarg, ptr captures(none)) #1

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
attributes #1 = { nocallback nofree nosync nounwind willreturn memory(argmem: readwrite) }
attributes #2 = { nocallback nofree nounwind willreturn memory(argmem: write) }
