src/codegen/tests/snapshots/rusty__codegen__tests__string_tests__function_takes_string_paramter_and_returns_string.snap
---
source: src/codegen/tests/string_tests.rs
expression: program
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { [81 x i8] }

@main_instance = global %main zeroinitializer
@utf08_literal_0 = private unnamed_addr constant [154 x i8] c"abcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabc\00"

define void @read_string(ptr %0, ptr %1) {
entry:
  %read_string = alloca ptr, align [filtered]
  store ptr %0, ptr %read_string, align [filtered]
  %to_read = alloca [81 x i8], align [filtered]
  call void @llvm.memset.p0.i64(ptr align [filtered] %to_read, i8 0, i64 81, i1 false)
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %to_read, ptr align [filtered] %1, i64 80, i1 false)
  %deref = load ptr, ptr %read_string, align [filtered]
  call void @llvm.memcpy.p0.p0.i32(ptr align [filtered] %deref, ptr align [filtered] %to_read, i32 80, i1 false)
  ret void
}

define void @main(ptr %0) {
entry:
  %text1 = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 0
  %__read_string0 = alloca [81 x i8], align [filtered]
  call void @llvm.lifetime.start.p0(i64 -1, ptr %__read_string0)
  call void @llvm.memset.p0.i64(ptr align [filtered] %__read_string0, i8 0, i64 ptrtoint (ptr getelementptr ([81 x i8], ptr null, i32 1) to i64), i1 false)
  call void @read_string(ptr %__read_string0, ptr @utf08_literal_0)
  call void @llvm.memcpy.p0.p0.i32(ptr align [filtered] %text1, ptr align [filtered] %__read_string0, i32 80, i1 false)
  call void @llvm.lifetime.end.p0(i64 -1, ptr %__read_string0)
  ret void
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #0

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i64, i1 immarg) #1

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i32(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i32, i1 immarg) #1

; Function Attrs: nocallback nofree nosync nounwind willreturn memory(argmem: readwrite)
declare void @llvm.lifetime.start.p0(i64 immarg, ptr captures(none)) #2

; Function Attrs: nocallback nofree nosync nounwind willreturn memory(argmem: readwrite)
declare void @llvm.lifetime.end.p0(i64 immarg, ptr captures(none)) #2

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }
attributes #1 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
attributes #2 = { nocallback nofree nosync nounwind willreturn memory(argmem: readwrite) }
