src/codegen/tests/snapshots/rusty__codegen__tests__string_tests__function_var_constant_strings_should_be_collected_as_literals.snap
---
source: src/codegen/tests/string_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@__FSTRING_TO_DT.ignore__init = unnamed_addr constant [2 x i8] c"*\00"
@__FSTRING_TO_DT.fchar__init = unnamed_addr constant [2 x i8] c"#\00"
@utf08_literal_0 = private unnamed_addr constant [2 x i8] c"#\00"
@utf08_literal_1 = private unnamed_addr constant [2 x i8] c"*\00"

define i32 @FSTRING_TO_DT() {
entry:
  %FSTRING_TO_DT = alloca i32, align [filtered]
  %ignore = alloca [2 x i8], align [filtered]
  %fchar = alloca [2 x i8], align [filtered]
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %ignore, ptr align [filtered] @__FSTRING_TO_DT.ignore__init, i64 ptrtoint (ptr getelementptr ([2 x i8], ptr null, i32 1) to i64), i1 false)
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %fchar, ptr align [filtered] @__FSTRING_TO_DT.fchar__init, i64 ptrtoint (ptr getelementptr ([2 x i8], ptr null, i32 1) to i64), i1 false)
  store i32 0, ptr %FSTRING_TO_DT, align [filtered]
  call void @llvm.memcpy.p0.p0.i32(ptr align [filtered] %fchar, ptr align [filtered] @utf08_literal_0, i32 1, i1 false)
  call void @llvm.memcpy.p0.p0.i32(ptr align [filtered] %ignore, ptr align [filtered] @utf08_literal_1, i32 1, i1 false)
  %FSTRING_TO_DT_ret = load i32, ptr %FSTRING_TO_DT, align [filtered]
  ret i32 %FSTRING_TO_DT_ret
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i64, i1 immarg) #0

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i32(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i32, i1 immarg) #0

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
