src/codegen/tests/snapshots/rusty__codegen__tests__string_tests__generate_with_invalid_casted_string_assignment.snap
---
source: src/codegen/tests/string_tests.rs
expression: result
---
error: Cannot generate String-Literal for type INT
  ┌─ <internal>:5:10
  │
5 │ y := INT#"seven";
  │          ^^^^^^^ Cannot generate String-Literal for type INT


